@startuml

class Sucursal {
  - int id
  - String direccion
  - String ciudad
}

class RegistroMedico {
  - int id
  - int idNino
  - String observacion
  - String fecha
}

class Personal {
  - int idPersonal
  - String nombre
  - String cargo
}

class Almuerzo {
  - int id
  - String descripcion
  - String fecha
}

class EntregaAlmuerzo {
  - int id
  - int idNino
  - int idAlmuerzo
}

class Nino {
  - int idNiño
  - String nombre
  - int edad
  - String genero
  - int idEncargado
}

class Encargado {
  - int idEncargado
  - String nombre
  - String telefono
}

'Relaciones'


Sucursal "1" --> "0..*" Personal : trabaja en >
Sucursal "1" --> "0..*" Nino : asiste a >
Encargado "1" --> "0..*" Nino : cuida >
Nino "1" --> "0..*" RegistroMedico : tiene >
Nino "1" --> "0..*" EntregaAlmuerzo : recibe >
Almuerzo "1" --> "0..*" EntregaAlmuerzo : entregado en >

@enduml
